feat: warehouse management